kubernetes/apps/default/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - authentik.iacob.uk
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
